src/objects/Community_Announcement__c.object
<CustomObject>
    <description>Scheduled announcements to surface in Lightning Communities.</description>
    <fields>
        <fullName>Announce_to_Community__c</fullName>
        <label>Announce to Community</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Peak Announcements</fullName>
                </value>
                <value>
                    <fullName>Test Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Announcement_Body__c</fullName>
        <label>Announcement Body</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Announcement_Call_to_Action__c</fullName>
        <description>The call to action that a user will click on to be taken to a provided URL.</description>
        <inlineHelpText>The call to action that a user will click on to be taken to a provided URL.</inlineHelpText>
        <label>Announcement Call to Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement_Channel__c</fullName>
        <label>Announcement Channel</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Peak Announcements: Product Page</fullName>
                </value>
                <value>
                    <fullName>Test Community: Groups</fullName>
                </value>
                <value>
                    <fullName>Custom Channel</fullName>
                </value>
                <value>
                    <fullName>Page A</fullName>
                </value>
                <value>
                    <fullName>Page B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Announcement_Dismissible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dismissible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Announcement_Type__c</fullName>
        <description>Choose the type of announcement.</description>
        <inlineHelpText>Choose the type of announcement. Notification = general/passive, critical = severe.</inlineHelpText>
        <label>Announcement Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>info</fullName>
                    <default>true</default>
                    <label>Notification</label>
                </value>
                <value>
                    <fullName>warning</fullName>
                    <label>Alert</label>
                </value>
                <value>
                    <fullName>error</fullName>
                    <label>Critical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Announcement_URL__c</fullName>
        <description>The URL the user is taken to when clicking on the call to action text.</description>
        <inlineHelpText>The URL the user is taken to when clicking on the call to action text.</inlineHelpText>
        <label>Announcement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>Date and time to stop showing this announcement in the community.</description>
        <inlineHelpText>Date and time to stop showing this announcement in the community.</inlineHelpText>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>CASE(Announcement_Type__c, &quot;info&quot;, 3, &quot;warning&quot;, 2, &quot;error&quot;, 1, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Date and time to start showing this announcement in the community.</description>
        <inlineHelpText>Date and time to start showing this announcement in the community.</inlineHelpText>
        <label>Start Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Community Announcement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Announcement_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>